ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: certman 
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vishalrhce.ml
    - imvishalvyas.ml
    secretName: letsencrypt-prod
  rules:
  - host: vishalrhce.ml
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: imvishalvyas.ml
    http:
      paths:
      - backend:
          serviceName: certman
          servicePort: 80
